_sass/_layout.scss
/* Side Menu/Navigation */
#sidebar-wrapper {
  position: fixed;
  z-index: 2;
  right: 0;
  width: 250px;
  height: 100%;
  -webkit-transition: all 0.4s ease 0s;
  transition: all 0.4s ease 0s;
  -webkit-transform: translateX(250px);
  transform: translateX(250px);
  background: #1D809F;
  border-left: 1px solid rgba(255, 255, 255, 0.1);
}
.sidebar-nav {
  position: absolute;
  top: 0;
  width: 250px;
  margin: 0;
  padding: 0;
  list-style: none;
}
.sidebar-nav li.sidebar-nav-item a {
  display: block;
  text-decoration: none;
  color: #fff;
  padding: 15px;
}
.sidebar-nav li a:hover {
  text-decoration: none;
  color: #fff;
  background: rgba(255, 255, 255, 0.2);
}
.sidebar-nav li a:active,
.sidebar-nav li a:focus {
  text-decoration: none;
}
.sidebar-nav > .sidebar-brand {
  font-size: 1.2rem;
  background: rgba(52, 58, 64, 0.1);
  height: 80px;
  line-height: 50px;
  padding-top: 15px;
  padding-bottom: 15px;
  padding-left: 15px;
}
.sidebar-nav > .sidebar-brand a {
  color: #fff;
}
.sidebar-nav > .sidebar-brand a:hover {
  color: #fff;
  background: none;
}
#sidebar-wrapper.active {
  right: 250px;
  width: 250px;
  -webkit-transition: all 0.4s ease 0s;
  transition: all 0.4s ease 0s;
}
.menu-toggle {
  position: fixed;
  right: 15px;
  top: 15px;
  width: 50px;
  height: 50px;
  text-align: center;
  color: #fff;
  background: rgba(52, 58, 64, 0.5);
  line-height: 50px;
  z-index: 999;
}
.menu-toggle:focus, .menu-toggle:hover {
  color: #fff;
}
.menu-toggle:hover {
  background: #343a40;
}


/** Section - Masthead aka Hero **/
.masthead {
  min-height: 30rem;
  position: relative;
  display: table;
  width: 100%;
  height: auto;
  padding-top: 8rem;
  padding-bottom: 8rem;
  background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0.1)), to(rgba(255, 255, 255, 0.1))), url("../images/portland-bridge.jpg");
  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../images/portland-bridge.jpg");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}
.masthead h1 {
  font-size: 4rem;
  margin: 0;
  padding: 0;
  color: white;
  margin-top: -4.5rem;
}
.masthead h3 {
  color: whitesmoke;
}
@media (min-width: 992px) {
  .masthead {
    height: 100vh;
  }
  .masthead h1 {
    font-size: 5.5rem;
  }
}


/** Section - About **/
.about {
  .container {
    p:last-of-type {
      margin-bottom: 0 !important;
    }
  }
}

/** Section - Services **/
.services {
  background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0.1)), to(rgba(255, 255, 255, 0.1))), url("../images/cartographer.png");
  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../images/cartographer.png");
}


/** Section - Blog Preview **/
.blog-preview {
  background-color: lightgray;
  .blog-preview-items {
    display: flex;
    flex-wrap: wrap;
    margin-left: -20px;
    margin-top: -20px;
    .blog-preview-item {
      flex: 1 0 calc(50% - 20px);
      margin-left: 20px;
      margin-top: 20px;
      text-align: left;
      &:nth-child(-n+2) {
        margin-top: 0;
      }
    }
  }
}


/** Section - Porfolio **/
.portfolio {
  .portfolio-item {
    display: block;
    position: relative;
    overflow: hidden;
    max-width: 530px;
    margin: auto auto 1rem;
  }
  .portfolio-item .caption {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    height: 100%;
    width: 100%;
    background-color: rgba(33, 37, 41, 0.2);
    position: absolute;
    top: 0;
    bottom: 0;
    z-index: 1;
  }
  .portfolio-item .caption .caption-content {
    color: #fff;
    margin: auto 2rem 2rem;
  }
  .portfolio-item .caption .caption-content h2 {
    font-size: 0.9rem;
    text-transform: uppercase;
  }
  .portfolio-item .caption .caption-content p {
    font-weight: 400;
    font-size: 1.2rem;
  }
  @media (min-width: 992px) {
    .portfolio-item {
      max-width: none;
      margin: 0;
    }
    .portfolio-item .caption {
      -webkit-transition: -webkit-clip-path 0.25s ease-out, background-color 0.7s;
      -webkit-clip-path: inset(0px);
      clip-path: inset(0px);
    }
    .portfolio-item .caption .caption-content {
      -webkit-transition: opacity 0.25s;
      transition: opacity 0.25s;
      margin-left: 5rem;
      margin-right: 5rem;
      margin-bottom: 5rem;
    }
    .portfolio-item img {
      -webkit-transition: -webkit-clip-path 0.25s ease-out;
      -webkit-clip-path: inset(-1px);
      clip-path: inset(-1px);
    }
    .portfolio-item:hover img {
      -webkit-clip-path: inset(2rem);
      clip-path: inset(2rem);
    }
    .portfolio-item:hover .caption {
      background-color: rgba(29, 128, 159, 0.9);
      -webkit-clip-path: inset(2rem);
      clip-path: inset(2rem);
    }
  }
}


/** Section - Blurb **/
.blurb {
  background: url("../images/cartographer.png");
  background-color: rgba(266,78,66, .9);
  h3 {
    margin-bottom: 0 !important;
    text-align: center;
  }
  h3 + h3 {
    margin-top: 1rem;
  }
}


/** Section - Map **/
.map {
  height: 30rem;
  iframe {
    pointer-events: none;
  }
}
@media (max-width: 992px) {
  .map {
    height: 75%;
  }
}


/** Footer **/
footer {
  padding-top: 5rem;
  padding-bottom: 5rem;
  .social-link {
    display: block;
    height: 4rem;
    width: 4rem;
    line-height: 4.3rem;
    font-size: 1.5rem;
    background-color: #1D809F;
    -webkit-transition: background-color 0.15s ease-in-out;
    transition: background-color 0.15s ease-in-out;
    -webkit-box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
    &:hover {
      background-color: #155d74;
      text-decoration: none;
    }
  }
}


/** Back to Top Button **/
.scroll-to-top {
  position: fixed;
  right: 15px;
  bottom: 15px;
  display: none;
  width: 50px;
  height: 50px;
  text-align: center;
  color: white;
  background: rgba(52, 58, 64, 0.5);
  line-height: 45px;
}
.scroll-to-top:focus, .scroll-to-top:hover {
  color: white;
}
.scroll-to-top:hover {
  background: #343a40;
}
.scroll-to-top i {
  font-weight: 800;
}

